# hspgw

./: .cproject  .project  VERSION
.svn/: wc.db
hspgw_setup_nb/: howto.txt  release_notes.txt
hspgw_setup_nb/config/dev/: sql.conf
hspgw_setup_nb/config/staging/: clients.conf
hspgw_setup_nb/config/test/: clients.conf
hspgw_setup_nb/install/: install.sh  postinstall.sh  preinstall.sh
libltdl/: config.h
mibs/: FREERADIUS-PRODUCT-HSPGW-MIB.txt
raddb/: clients.conf  dictionary.in  proxy.conf  radiusd.conf  radiusd.conf.in
raddb/modules/: pms  pms_1
raddb/sites-available/: default
src/include/: autoconf.h  radpaths.h
src/modules/: modules.7z
src/modules/rlm_pms/: rlm_pms.c  rlm_pms.h
src/modules/rlm_pms_1/: Makefile.clean  copy_from_pms2.sh  rlm_pms_1.c
src/modules/rlm_pms_2/: Makefile.in  configure  rlm_pms_2.c
src/modules/rlm_sql/: stable
src/modules/rlm_sql/drivers/rlm_sql_oracle/: sql_oracle.c
src/modules/rlm_sql/drivers/rlm_sql_sqlrelay/: Makefile.in  configure  configure.in  sql_sqlrelay.c
src/modules/rlm_unix/: config.h
src/tests/.dict/raddb/: dictionary
src/tests_power3/: scen_pms_1.sh  scen_pms_2.sh  testall.sh  utils.sh
